# spite-site

./: Cargo.toml  Dockerfile
src/: main.rs  spite.html
